# job-apply-env

./: Dockerfile  README.md  baseline.py  client.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_client.py  test_env.py  test_llm.py
env/: environment.py  models.py
env/graders/: hr_grader.py  linkedin_grader.py  llm_grader.py  negotiation_grader.py  resume_grader.py
env/tasks/: hr_tasks.py  linkedin_tasks.py  negotiation_tasks.py  resume_tasks.py
server/: __init__.py  app.py
