[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "job-apply-env"
version = "0.1.0"
description = "An OpenEnv RL environment simulating the Indian job application process"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hemanth"}]
keywords = ["openenv", "reinforcement-learning", "job-application", "india", "nlp"]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "groq",
    "python-dotenv",
    "gradio",
    "httpx",
    "pytest",
    "openenv-core>=0.1.1",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/HemanthDas/job-apply-env"
Repository = "https://github.com/HemanthDas/job-apply-env"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]